code/practise/ingress/https-rest-api/springboot-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-https-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - springboot.local
    secretName: springboot-tls
  rules:
  - host: "springboot.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 80
